<?xml version="1.0" encoding="utf-8"?>
<!DOCTYPE project>
<resources>

    <string name="app_name">CreditCalcPlus</string>
    <string name="action_settings">Настройки</string>
    <string name="TITLE_MAIN">Главная</string>
    <string name="TITLE_TABLE">Таблица</string>
    <string name="TITLE_GRAPHIC">График</string>
    <string name="TITLE_HISTORY">История</string>

    <string name="tvTypeOfCredit">Тип кредита</string>
    <string name="rbAnnuity">Аннуитетный</string>
    <string name="rbVaried">Дифференцированный</string>
    <string name="tvSumma">Кредит</string>
    <string name="tvPercent">Ставка %</string>
    <string name="tvPeriod">Срок в месяцах</string>
    <string name="tvFirstDate">Первый платёж</string>
    <string name="tvComission">Мес. комиссии</string>
    <string name="spComissionType">Тип комиссии</string>
    <string-array name="spComissionTypeList">
        <item>% суммы кредита</item>
        <item>% от остатка долга</item>
        <item>руб.</item>
    </string-array>
    <string name="tvAnticipatedRepayment">Досрочные погашения:</string>
    <string name="tvTypeOfRepayment">Вид погашения</string>
    <string name="rbPartRepPeriod">Уменьшение срока кредита</string>
    <string name="rbPartRepDebt">Уменьшение основного долга</string>
    <string name="tvPartRepDate">Дата</string>
    <string name="tvPartRepSumm">Сумма</string>
    <string name="btnSaveHistory">Сохранить</string>
    <string name="btnSettings">Настройки</string>
    <string name="btnClose">Закрыть</string>

<!--     <string name="colNameN">№ платежа</string> -->
<!--     <string name="colNameDatePay">Дата платежа</string> -->
<!--     <string name="colNameSummPay">Сумма платежа</string> -->
<!--     <string name="colNameCredPay">Основной долг</string> -->
<!--     <string name="colNameProcPay">Начисленные проценты</string> -->
<!--     <string name="colNameComsPay">Ежемесячные комиссии</string> -->
<!--     <string name="colNameRestPay">Остаток задолженности</string> -->
    
    <string-array name="colNameArray">
        <item>№ платежа</item>
        <item>Дата платежа</item>
        <item>Сумма платежа</item>
        <item>Основной долг</item>
        <item>Начисленные проценты</item>
        <item>Ежемесячные комиссии</item>
        <item>Остаток задолженности</item>
        <item>Частичное погашение</item>
    </string-array>
    
    <string name="btnAddPartRep">+</string>
    <string name="btnClearPartRep">x</string>
    <string name="btnDelPartRep">-</string>
    <string name="textResult">Итог:</string>
    
    <string name="cbFirstOnlyProc">Первый платёж - проценты</string>
    <string name="tvInMonth">В месяц</string>
    <string name="tvOverPay">Переплата</string>
    
    <string-array name="languageArray">
        <item>Системный</item> 
        <item>Русский</item>
        <item>Английский</item>
    </string-array>
    <string-array name="languageArrayVal">
        <item>default</item> 
        <item>ru</item>
        <item>en_US</item>
    </string-array>
    
    <string name="prefSelLang">Выбор языка</string>
    <string name="prefLang">Язык</string>
    <string name="prefSelTablSettings">Установка настроек таблицы</string>
    <string name="prefTablSettings">Настройки таблицы</string>
    <string name="prefSelTablCol">Выбор колонок таблицы</string>
    <string name="prefTablCol">Колоноки таблицы</string>
    <string name="btnShowText">Load</string>
    <string name="headerHistoryText">Введите начальную дату загрузки:</string>
    <string name="ErrDateLoad">Введите дату</string>
    <string name="ToastSave">Сохранено</string>
</resources>
