<?xml version="1.0" encoding="utf-8"?>
<!DOCTYPE project>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="0dp"
                android:gravity="center"
                android:text="@string/tvTypeOfRepayment"
                android:textSize="16sp" >
            </TextView>

            <Button
                android:id="@+id/btnDelPartRep"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_column="1"
                android:text="@string/btnDelPartRep"
                android:textSize="12sp" >
            </Button>
        </TableRow>

        <RadioGroup
            android:id="@+id/rgTypeOfRepayment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="0dp"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/rbPartRepPeriod"
                style="@style/MainFragmentRadioButtons"
                android:checked="true"
                android:text="@string/rbPartRepPeriod" >
            </RadioButton>

            <RadioButton
                android:id="@+id/rbPartRepDebt"
                style="@style/MainFragmentRadioButtons"
                android:checked="false"
                android:text="@string/rbPartRepDebt" >
            </RadioButton>
        </RadioGroup>
    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                style="@style/MainFragmentColumnNames_TV"
                android:text="@string/tvPartRepDate" >
            </TextView>

            <EditText
                android:id="@+id/etPartRepDate"
                style="@style/EditText_date" >
            </EditText>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp" >

            <TextView
                style="@style/MainFragmentColumnNames_TV"
                android:text="@string/tvPartRepSumm" >
            </TextView>

            <EditText
                android:id="@+id/etPartRepSumm"
                style="@style/EditText_numberSigned" >
            </EditText>
        </TableRow>
    </TableLayout>

</TableLayout>